themes/kpumuk/assets/theme.css
/* Intuitive box sizing
   ========================================================================== */
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

/* Color palette
   ========================================================================== */

*,
::after,
::before {
  box-sizing: border-box;
}

:root {
  --accent-color: #c41d47;
  --text-color: #445566;
  --bg-color: #fffef8;
  --bullet-color: #d4d4d4;
  --counter-color: #737373;
  --code-bg-color: #fff2ea;
  --code-text-color: #445566;
  --pre-line-wrap-color: #87836f;
  --table-border-color: #525252;
  --footer-bg-color: #223344;
  --footer-text-color: #b4aaaa;
  --footer-link-color: #fea2a9;
  --nav-item-bg-color: rgb(239.58, 238.59, 232.63);
}

@media (prefers-color-scheme: dark) {
  :root {
    --accent-color: #fea2a9;
    --text-color: #c4c4c4;
    --bg-color: #1f222a;
    --bullet-color: #666666;
    --counter-bg-color: #a3a3a3;
    --code-bg-color: #293c50;
    --code-text-color: c4c4c4;
    --pre-line-wrap-color: #595543;
    --table-border-color: #525252;
    --footer-bg-color: rgb(8.97, 11.53, 18.68);
    --footer-text-color: #b4aaaa;
    --footer-link-color: #fea2a9;
    --nav-item-bg-color: rgb(42.42, 45.62, 54.1);
  }
}

/* Typography
   ========================================================================== */

html {
  /* https://tailwindcss.com/docs/font-family */
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  font-feature-settings: 'liga', 'kern';
}

/*
 * Fluid typography
 * https://www.smashingmagazine.com/2016/05/fluid-typography/
 *
 * Font size: 16px-21px
 * Screen size: 470px-1225px
 */
html {
  font-size: 16px;
}
@media (min-width: 470px) {
  html {
    font-size: calc(16px + 5 * (100vw - 470px) / 755);
  }
}
@media (min-width: 1225px) {
  html {
    font-size: 21px;
  }
}

h1 {
  font-size: 2.5rem;
  line-height: 2.8rem;
  margin-bottom: 1rem;
}

h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.75rem;
}
h4 {
  font-size: 1.5rem;
}
h5 {
  font-size: 1.25rem;
}
h2,
h3,
h4,
h5 {
  margin: 1.5rem 0 0.5rem 0;
  font-weight: normal;
}

body {
  line-height: 1.4;
}

header,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: calluna, ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
  font-feature-settings: 'dlig';
}

p {
  padding-top: 0.4em;
  margin: 0 0 1em 0;
}
ul,
ol {
  margin: 0.5rem 0 1rem;
  padding-inline-start: 2rem;
}
ul ul,
ul ol,
ol ul,
ol ol {
  margin: 0;
}

ol > li,
ul > li {
  padding-left: 0.375em;
}

header .subheading {
  font-weight: normal;
  font-style: italic;
  font-size: 1.5rem;
  line-height: 1.8rem;
}

code,
pre {
  font-feature-settings: normal;
  font-family: Fira Code, Menlo, Consolas, Monaco, ui-monospace, andale mono, ubuntu mono,
    'Liberation Mono', 'Courier New', monospace;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  font-variant-ligatures: none;
  word-wrap: normal;
  tab-size: 4;
  hyphens: none;
}

/* Wrap lines and prepend them with a small arrow "↳" to indicate the line-break.
 * This should allow better code reading on mobile (I hope)
 */
pre .line {
  white-space: pre-wrap;
  word-break: break-all;
  padding-left: 1.5em;
  text-indent: -1.5em;
  overflow: hidden;
  position: relative;
}

pre .line:before {
  position: absolute;
  z-index: 1;
  left: 0;
  line-height: inherit;
  font-size: inherit;
  white-space: pre;
  color: var(--pre-line-wrap-color);
  content: '\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3\A\21B3';
}

/* Layout
   ========================================================================== */

html,
body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  background-color: var(--bg-color) !important;
  color: var(--text-color) !important;
}
header {
  text-align: center;
  margin: 0 1em;
}
@media (min-width: 802px) {
  header {
    margin-top: 1.4em;
    margin-bottom: 1.4em;
  }
}

@media (min-width: 470px) {
  header {
    margin-left: 2.8em;
    margin-right: 2.8em;
  }
}
header p.subheading {
  margin-bottom: 1rem;
}
header > p:not(.subheading) {
  padding-top: 0.5em;
  padding-bottom: 0.9em;
  margin-bottom: 0;
}

main {
  flex: auto;
  max-width: 48rem;
  margin: 1rem auto;
}

article {
  color: var(--text-color) !important;
  font-size: 1.2em;
  padding: 0 1rem;
}

article blockquote {
  margin: 0;
  padding-left: 0.75rem;
  font-style: italic;
  border-left: 0.25rem solid var(--accent-color);
  margin-left: -1rem;
  margin-bottom: 1.6em;
}

article pre {
  overflow-x: auto;
  max-width: 100vw;
  min-width: 250px;
  margin-left: -1rem;
  margin-right: -1rem;
  padding: 0.75rem 1rem 1rem 1rem;
  border-left: 0.25rem solid var(--accent-color);
}

.article-list article header {
  margin: 2em 0 0;
  text-align: left;
}

.article-list article header h2 {
  margin-bottom: 0;
}

.article-list article header h2,
.article-list article header p.subheading {
  display: inline;
}

.article-list article header p.subheading::before {
  content: ':';
  word-break: break-all;
  padding-right: 1rem;
}

.article-list article footer time {
  font-size: 1em;
  font-style: italic;
  display: block;
}

.article-list article blockquote {
  font-style: normal;
  border-left: 0;
  margin: 0;
  padding-left: 0;
}

@media (min-width: 470px) {
  .article-list article blockquote,
  .article-list article footer {
    padding-left: 1.5em;
  }
}

.article-list article footer {
  display: flex;
  margin-top: 1rem;
  margin-bottom: 1rem;
  justify-content: space-between;
}

body > footer {
  background-color: var(--footer-bg-color);
  color: var(--footer-text-color);
  opacity: 100%;
}

#footer {
  max-width: 48rem;
  padding: 1.4em;
  padding-left: 2rem;
  padding-right: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
}

code {
  font-variant-ligatures: none;
  font-style: normal;
  font-size: calc(0.75em + 0.1vw);
  line-height: calc(1.5em + 0.2vw);
}

@media (prefers-color-scheme: light) {
  .image-dark {
    display: none;
  }
}
@media (prefers-color-scheme: dark) {
  .image-light {
    display: none;
  }
}

figure {
  text-align: center;
  position: relative;
  margin: 1rem 0;
  padding: 0;
}

figure > img {
  margin: 0 auto;
  max-width: 100%;
  height: auto;
}

figure > object {
  margin: 0 auto;
  max-width: 100%;
}

figure .container-svg {
  margin: 0 auto;
  max-width: 100%;
  position: relative;
}

figure .container-svg > object {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

figure > figcaption {
  font-style: italic;
}

footer .copyright {
  margin: 0 auto;
}

nav.article-chain {
  background-color: var(--nav-item-bg-color);
  border-radius: 0.5rem;
  margin-top: 3rem;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  padding: 1rem;
  gap: 1.5rem;
}

nav.article-chain a {
  flex: 1;
  display: flex;
  align-items: center;
  padding-right: 0.75rem;
  text-decoration: none;
}

nav.article-chain a span:not(.marker) {
  text-decoration: underline;
}

nav.article-chain a:hover span:not(.marker) {
  text-decoration: underline double;
  -webkit-text-decoration: underline double;
}

nav.article-chain a.next .marker {
  margin-right: 0.3rem;
}

nav.article-chain a.prev .marker {
  margin-left: 0.3rem;
}

@media (min-width: 470px) {
  nav.article-chain {
    margin-top: 4rem;
    padding: 1.5rem;
  }

  nav.article-chain {
    flex-direction: row;
  }

  nav.article-chain a {
    /* width: calc(50% - 1.5rem); */
  }

  nav.article-chain a.prev {
    justify-content: flex-end;
    text-align: right;
  }
}

nav.online {
  display: flex;
  flex-wrap: wrap;
  gap: 0.75rem;
  justify-content: center;
  margin: 0.25rem 0 0.75rem 0;
}

footer nav.online a {
  width: 3rem;
  height: 3rem;
  display: inline-block;
  color: var(--footer-text-color);
}

nav.online a svg {
  transition-property: margin-top;
  transition-duration: 0.1s;
  filter: drop-shadow(1px 2px 3px lch(4.86% 13.66 254.64 / 10%))
    drop-shadow(2px 4px 6px lch(4.86% 13.66 254.64 / 10%))
    drop-shadow(4px 8px 12px lch(4.86% 13.66 254.64 / 10%));
}

nav.online a:hover svg {
  margin-top: -0.2rem;
  filter: drop-shadow(1px 2px 3px lch(4.86% 13.66 254.64 / 30%))
    drop-shadow(2px 4px 6px lch(4.86% 13.66 254.64 / 30%))
    drop-shadow(4px 8px 12px lch(4.86% 13.66 254.64 / 30%));
}

@media (prefers-color-scheme: dark) {
  nav.online a svg {
    transition-property: margin-top;
    transition-duration: 0.1s;
    filter: drop-shadow(1px 2px 3px lch(20% 0 0 / 10%)) drop-shadow(2px 4px 6px lch(20% 0 0 / 10%))
      drop-shadow(4px 8px 12px lch(20% 0 0 / 10%));
  }

  nav.online a:hover svg {
    margin-top: -0.2rem;
    filter: drop-shadow(1px 2px 3px lch(20% 0 0 / 30%)) drop-shadow(2px 4px 6px lch(20% 0 0 / 30%))
      drop-shadow(4px 8px 12px lch(20% 0 0 / 30%));
  }
}

article table {
  width: 100%;
  table-layout: auto;
  text-align: left;
  margin-top: 2em;
  margin-bottom: 2em;
  text-indent: 0;
  border-color: inherit;
  border-collapse: collapse;
  /* margin-left: -1rem;
  margin-right: -1rem; */
}

article table thead,
article table tbody tr {
  border-bottom: 1px solid var(--table-border-color);
}

article table thead th {
  font-weight: bold;
  vertical-align: bottom;
  padding-bottom: 0.2em;
}
article table tbody td {
  padding: 0.2em 0.2em 0.2em 0;
}

/* Theme
   ========================================================================== */

body {
  border-top: 0.5rem solid var(--accent-color);
}

ol > li::marker {
  color: var(--counter-color);
}
ul > li::marker {
  color: var(--bullet-color);
}

a {
  text-decoration: underline;
  color: var(--accent-color);
}
a:hover {
  text-decoration: underline double;
  -webkit-text-decoration: underline double;
}

code {
  display: inline-block;
}

:not(pre) > code {
  padding: 0 0.2725em;
  background: var(--code-bg-color);
  color: var(--code-text-color);
  word-break: break-all;
  white-space: break-spaces;
  border-radius: 3px;
}

a > code {
  color: inherit;
  text-decoration: inherit;
}

blockquote code {
  font-style: inherit;
}

.highlight {
  position: relative;
}

footer:not(.tags) a {
  color: var(--footer-link-color);
}

footer.tags {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin-top: 2rem;
}

footer.tags a {
  padding: 0.75rem 1.5rem;
  background-color: var(--nav-item-bg-color);
  border-radius: 1rem;
}

